package.json change for gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ejdms.github.io/game-bet/index.html",
+  "homepage": "https://ejdms.github.io/game-bet",
   "name": "bet-game-react",
   "version": "0.1.0",
   "private": true,
